--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -126,7 +126,20 @@
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group mx-1">
-                  <label for="selecTopOSUtilise" class="form-label">Années d'expériences</label>
+                  <label for="selectContinentTopOSUtilise" class="form-label">Continent</label>
+                  <select class="form-select bg-primary text-white" id="selectContinentTopOSUtilise" style="width: 150px; min-width: 150px;">
+                    <option value="Amérique" style="color: black; background-color: white;"></option>
+                    <option value="Europe" style="color: black; background-color: white;"></option>
+                  </select>
+                </div>
+                <div class="form-group mx-1">
+                  <label for="selectMetierTopOSUtilise" class="form-label">Métier</label>
+                  <select class="form-select bg-primary text-white" id="selectMetierTopOSUtilise" style="width: 150px; min-width: 150px;">
+                    <option value="Métier" style="color: black; background-color: white;"></option>
+                  </select>
+                </div>
+                <div class="form-group mx-1">
+                  <label for="selecTopOSUtilise" class="form-label">Top</label>
                   <select class="form-select bg-primary text-white" id="selecTopOSUtilise" style="width: 150px; min-width: 150px;">
                     <option value="5" style="color: black; background-color: white;"></option>
                     <option value="6" style="color: black; background-color: white;"></option>
@@ -154,8 +167,21 @@
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group mx-1">
-                  <label for="selecTopOSUtilise" class="form-label">Années d'expériences</label>
-                  <select class="form-select bg-primary text-white" id="selecTopOSUtilise" style="width: 150px; min-width: 150px;">
+                  <label for="selectContinentTopOutilComm" class="form-label">Continent</label>
+                  <select class="form-select bg-primary text-white" id="selectContinentTopOutilComm" style="width: 150px; min-width: 150px;">
+                    <option value="Amérique" style="color: black; background-color: white;"></option>
+                    <option value="Europe" style="color: black; background-color: white;"></option>
+                  </select>
+                </div>
+                <div class="form-group mx-1">
+                  <label for="selectMetierTopOutilComm" class="form-label">Métier</label>
+                  <select class="form-select bg-primary text-white" id="selectMetierTopOutilComm" style="width: 150px; min-width: 150px;">
+                    <option value="Métier" style="color: black; background-color: white;"></option>
+                  </select>
+                </div>
+                <div class="form-group mx-1">
+                  <label for="selecTopOutilComm" class="form-label">Top</label>
+                  <select class="form-select bg-primary text-white" id="selecTopOutilComm" style="width: 150px; min-width: 150px;">
                     <option value="5" style="color: black; background-color: white;"></option>
                     <option value="6" style="color: black; background-color: white;"></option>
                     <option value="7" style="color: black; background-color: white;"></option>
