--- a/pages/dashboard1.html
+++ b/pages/dashboard1.html
@@ -116,7 +116,7 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction de son nombre d’années d’expérience</h6>
+              <h6 class="mb-0"><strong>Revenu moyen</strong> d’un professionnel en fonction de <strong>son nombre d’années d’expérience</strong></h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
@@ -146,7 +146,7 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction de son niveau d'étude</h6>
+              <h6 class="mb-0"><strong>Revenu moyen</strong> d’un professionnel en fonction de <strong>son niveau d'étude</strong></h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
