--- a/pages/dashboard2.html
+++ b/pages/dashboard2.html
@@ -116,7 +116,7 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction des plateformes Cloud utilisées</h6>
+              <h6 class="mb-0"><strong>Revenu moyen</strong> d’un professionnel en fonction des <strong>plateformes Cloud utilisées</strong></h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
