--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -116,8 +116,8 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Top 5 des systèmes d’exploitation 
-                utilisés par les professionnels dans le cadre de leur travail en fonction de leur métier</h6>
+              <h6 class="mb-0"><strong>Top 5</strong> des <strong>systèmes d’exploitation utilisés</strong>
+                par les professionnels dans le cadre de leur travail en <strong>fonction de leur métier</strong></h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
@@ -156,9 +156,9 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Top 5 des outils de 
-                communication utilisés par les professionnels dans le cadre de leur travail en 
-                fonction de leur métier</h6>
+              <h6 class="mb-0"><strong>Top 5 </strong>des <strong>outils de 
+                communication utilisés</strong> par les professionnels dans le cadre de leur travail en 
+                <strong>fonction de leur métier</strong></h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
