--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -44,7 +44,7 @@
     <span class="ms-1 font-weight-bold" style="margin-left: 10% !important; font-size: 1rem;">Graphique selon : </span>
     <br>
     <br>
-    <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
+    <div class="collapse navbar-collapse" id="sidenav-collapse-main" style="width: 250px; height: 190px;">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="../pages/dashboard1.html">
@@ -90,6 +90,17 @@
               </ul>
           </div>
         </div>
+      </div>
+      <div style="margin-top: 50px; margin-bottom: 50px;">
+        <a style="color: rgba(20, 20, 20, 0.4); text-decoration: none;">© Réalisé par :</a>
+        <br>
+        <a href="https://github.com/NaelFares" 
+          style="font-weight: bold; color: rgba(20, 20, 20, 0.4); text-decoration: none;" 
+          target="_blank">• FARES Nael</a> 
+        <br>
+        <a href="https://github.com/nesriiinee" 
+          style="font-weight: bold; color:  rgba(20, 20, 20, 0.4); text-decoration: none;" 
+          target="_blank">• BENHALIMA Nesrine</a>
       </div>
     </div>
   </aside>
@@ -183,22 +194,6 @@
     </div>
     
     <div style="margin-bottom: 3rem;"></div>
-
-      <div class="container-fluid">
-        <footer style="position: relative; display: inline-block; background-color: rgba(20, 20, 20, 0.4); padding: 0.5rem; border-radius: 8px;">
-          <div style="text-align: center; font-size: 0.875rem; font-weight: 400; line-height: 1.5; color: rgba(251, 251, 251, 0.75);">
-            © <span id="currentYear"></span> 
-            Réalisé par 
-            <a href="https://github.com/NaelFares" 
-              style="font-weight: bold; color: rgba(248, 249, 250, 0.9); text-decoration: none;" 
-              target="_blank">FARES Nael</a> 
-            et 
-            <a href="https://github.com/nesriiinee" 
-              style="font-weight: bold; color: rgba(248, 249, 250, 0.9); text-decoration: none;" 
-              target="_blank">BENHALIMA Nesrine</a>
-          </div>
-        </footer>
-    </div>
     </div>
   </main>
 
